# WEB_14

WEB_14Poe/: docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
WEB_14Poe/docs/source/: conf.py
WEB_14Poe/migrations/: env.py
WEB_14Poe/migrations/versions/: 04678e5fbbbd_add_verify_for_user.py  1c5490d180fa_init.py  30d51ce7c0e7_add_verify_for_user.py  613dcf395598_add_table_users.py
WEB_14Poe/postgres-data/base/13468/: 1247  1249  1259  16389  16392  16394  16396  16400  16402  16403  16404  16405  16406  16408  16414  16415  16417  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  (+6 more)
WEB_14Poe/postgres-data/global/: pg_control  pg_internal.init
WEB_14Poe/postgres-data/pg_stat/: db_0.stat  db_13468.stat  global.stat
WEB_14Poe/postgres-data/pg_xact/: 0000
WEB_14Poe/src/conf/: config.py  messages.py
WEB_14Poe/src/database/: db.py  models.py
WEB_14Poe/src/repository/: contacts.py  users.py
WEB_14Poe/src/routes/: auth.py  contacts.py  users.py
WEB_14Poe/src/schemas/: contact.py  user.py
WEB_14Poe/src/services/: auth.py  email.py
WEB_14Poe/tests/: conftest.py  test_e2e_auth.py  test_unit_repository_contact.py  test_unit_repository_users.py
