[tool.poetry]
name = "web13poe"
version = "0.1.0"
description = ""
authors = ["Sol"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
pytest = "^8.3.2"
sqlalchemy = "^2.0.32"
libgravatar = "^1.0.4"
fastapi-limiter = "^0.1.6"
fastapi-mail = "^1.4.1"
passlib = "^1.7.4"
cloudinary = "^1.41.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
bcrypt = "^4.2.0"


[tool.poetry.group.test.dependencies]
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "tests", ]
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"

